[b]Version 0.6.7[/b]:

(2009-01-05)
 * Added an option in Preferences->Subtitles to apply the ass style defined by
   the user to ass subtitles (overriding the style defined in the ass file).

(2009-01-04)
 * Now the dvd names follow the same scheme as mplayer: 
   dvd://title/device (where device can also be a folder or iso file).
   Internally it tries to avoid the use of the string "dvd:" so it could
   be easy to add support for dvdnav:

(2008-12-31)
 * Now the correct pts option can have a value of "auto". In this case
   neither -correct-pts nor -nocorrect-pts are passed to mplayer, the demuxer
   will decide. Should fix bug #2479566.
 * The proxy settings have been moved to a config dialog inside the find
   subtitles window.


[b]Version 0.6.6[/b]:

(2008-12-28)
 * (Linux) Now the options in the dvd menus can be selected with the mouse.
   To do so, select "Activate option in DVD menus" for the left mouse button
   in Preferences -> Keyboard and mouse.
 * Implemented a different way to select the initial audio track (or restore
   the old one after a restart). 
 * (Experimental) New code to show/hide the mouse cursor in the video window.

(2008-12-27)
 * (Linux) Added some actions to control the dvdnav buttons.

(2008-12-26)
 * The language filter in the find subtitles dialog is now saved to the ini 
   file.
 * New option for smplayer.ini: include_lang_on_filename (section 
   [findsubtitles]). If set to true (the default) the language code is 
   appended to the subtitle filename (e.g. video.avi => video_es.srt).
   Otherwise the language code is not appended (video.avi => video.srt).

(2008-12-24)
 * Implemented a different way to select the initial subtitle track (or restore
   the old one after a restart). Still needs some testing.

(2008-12-23)
 * Now smplayer tries to update the subtitle tracks if they change during
   playback. This makes subtitles work if using dvdnav, and seems to fix
   a problem when selecting the initial track 